Fix border-spacing for top content view

--- a/plugins/agiledashboard/www/themes/default/css/style.css
+++ b/plugins/agiledashboard/www/themes/default/css/style.css
@@ -228,6 +228,7 @@
     color: #999;
 }
 
+#topblcontent table,
 #topplanning table,
 #planning table,
 #blcontent table {
